aff3ct (3.0.2+git20240130.6f1d3b7-1) unstable; urgency=medium

  * Update to git 2024/01/30 (6f1d3b7) from the development branch.

 -- Gerhard Baer <Gerhard.Baer@protonmail.com>  Thu, 22 Feb 2024 09:02:59 +0100

aff3ct (3.0.2+git20240108.09ec39b-1) unstable; urgency=medium

  * Update to git 2024/01/08 (09ec39b) from the development branch.
  * Add single header for multiple SIMD variants <aff3ct-simd-all.hpp>.

 -- Gerhard Baer <Gerhard.Baer@protonmail.com>  Wed, 24 Jan 2024 18:44:35 +0100

aff3ct (3.0.2+git20231215.2f3a3ca-1) unstable; urgency=medium

  * Update to git 2023/12/15 (2f3a3ca) from the development branch.
  * Run regression testsuite for all SIMD variants (sse4, avx2, avx512).

 -- Gerhard Baer <Gerhard.Baer@protonmail.com>  Sat, 16 Dec 2023 15:13:28 +0100

aff3ct (3.0.2+git20231208.9a56428-1) unstable; urgency=medium

  * Update to git 2023/12/08 (9a56428) from the development branch.
  * Ship multiple SIMD variants of the shared library (sse4, avx2, avx512).

 -- Gerhard Baer <Gerhard.Baer@protonmail.com>  Tue, 12 Dec 2023 18:14:03 +0100

aff3ct (3.0.2+git20231103.7409f4c-1) unstable; urgency=medium

  * Initial package from development branch (2023/11/03).

 -- Gerhard Baer <Gerhard.Baer@protonmail.com>  Fri, 17 Nov 2023 13:50:15 +0100